crates/testscribe/tests/ui/sync_test_async_clone.rs
use testscribe::testscribe;

#[testscribe(cloneable_async)]
fn my_test() {
    then!("");
}

fn main() {}